[package]
name = "core"
version = "0.1.0"
authors = ["Philippe Assis <assis@philippeassis.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_yaml = "0.7.1"
serde_derive = "1.0.115"
assert-type-eq = "0.1.0"
serde = "1.0.111"
